name:                reflex-dom-validation
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Dom.Validation
                     , Reflex.Dom.Validation.Classes
                     , Reflex.Dom.Validation.Error
                     , Reflex.Dom.Validation.Id
                     , Reflex.Dom.Validation.Requires
                     , Reflex.Dom.Validation.Wrap
                     , Reflex.Dom.Validation.Collection
                     , Reflex.Dom.Validation.Workflow
                     , Reflex.Dom.Validation.Html5
                     , Reflex.Dom.Validation.Bootstrap
                     , Reflex.Dom.Validation.Bootstrap.Html5
                     , Reflex.Dom.Validation.Bootstrap.Errors
                     , Reflex.Dom.Validation.Bootstrap.Text
                     , Reflex.Dom.Validation.Bootstrap.Radio
                     , Reflex.Dom.Validation.Bootstrap.Select
                     , Reflex.Dom.Validation.Bootstrap.Checkbox
                     , Reflex.Dom.Validation.Bootstrap.Workflow
                     , Bootstrap
                     , Demo
                     , Demo.Example
                     , Demo.Example.Completed
                     , Demo.Example.Reason
                     , Demo.Example.CompletedWithReason
                     , Demo.Example.TodoItem
                     , Demo.Example.TestCollections
                     , Demo.Example.Workflow
                     , Demo.Example.Error
  build-depends:       base >=4.9 && <4.13
                     , mtl
                     , validation
                     , bytestring
                     , text
                     , time
                     , colour
                     , errors
                     , containers
                     , dependent-sum
                     , dependent-map
                     , lens
                     , ref-tf
                     , reflex
                     , reflex-dom
                     , ghcjs-dom
                     , jsaddle-warp
                     , wai-app-static
                     , aeson
                     , reflex-dom-storage
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
